@@ -1,4 +1,5 @@
 1.3.6.dev0
+ * #53: Log to syslog in addition to existing standard out logging.
  * #178: Look for .yml configuration file extension in addition to .yaml.
  * Remove Python cache files before each Tox run.
  * Add #borgmatic Freenode IRC channel to documentation.
